@@ -34,7 +34,6 @@ DIRS = \
     Config/tests \
     Repository/tests \
     Server/tests \
-    Server/ProviderRegistrationManager/tests \
     ExportServer/tests \
     Client/tests \
     Compiler/tests \
@@ -44,5 +43,6 @@ DIRS = \
     Listener/tests \
     Consumer/tests
 
+#    Server/ProviderRegistrationManager/tests \
 
 include $(ROOT)/mak/recurse.mak
